# dimstack

./: .gitignore  .pdm.toml  404.html  CHANGELOG.md  README.md  example.ipynb  example.py  example2.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.pdm  search.html  test.py
.github/workflows/: deploy.yml
API_Reference/Dimension/: index.html
API_Reference/Tolerance/: index.html
API_Reference/basics/: index.html
API_Reference/core/: index.html
API_Reference/displaying/: index.html
dimstack/: display.py  stats.py  tolerance.py
docs/: examples.md  index.md
docs/API_Reference/: Dimension.md  Tolerance.md  basics.md  core.md  displaying.md
examples/: example.py  example2.ipynb  example2.py  exp.py  index.html  tolerancing.ipynb
notebooks/: .jupyterlite.doit.db  example.ipynb
notebooks/pypi/: dimstack-0.1.0-py3-none-any.whl
search/: search_index.json
src/dimstack/: __init__.py  calc.py  dim.py  display.py  dist.py  eval.py  plot.py  stats.py  tolerance.py  utils.py
tests/: test_McGrawHill.py  test_calc_types.py  test_dim_types.py  test_distribution_types.py  test_doctest.py  test_mitcalc.py  test_newconceptdesigns.py  test_newconceptzdesigns.py  test_tolerance_types.py
