[project]
name = "dimstack"
version = "0.3.0"
description = ""
authors = [
    {name = "phcreery", email = "phcreery@gmail.com"},
]
dependencies = [
    "pandas>=1.5.2",
    "jinja2>=3.1.2",
    "latexify-py==0.2.0",
    "plotly>=5.14.1",
    "scipy>=1.8.1",
    "nbformat>=5.8.0",
    "Cython>=3.0.0",
]
requires-python = ">=3.8, <3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.254",
    "pkginfo>=1.9.6",
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.1",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-material>=9.1.9",
]

[tool.black]
line-length = 160

[tool.ruff]
# Same as Black.
line-length = 160

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
after_build = "cp '.\\dist\\*.whl' '.\\notebooks\\pypi\\'"
test = "python -m unittest"
docs = "python -m mkdocs serve"
deploydocs = "python -m mkdocs gh-deploy"
