[project]
name = "dimstack"
version = "0.5.0"
description = ""
authors = [
    {name = "phcreery", email = "phcreery@gmail.com"},
]
dependencies = [
    "pandas>=1.5.2",
    "jinja2>=3.1.2",
    "plotly>=5.14.1",
    "scipy>=1.8.1",
    "rich>=13.7.0",
    "ruff>=0.7.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "Cython>=3.0.0",
    "ruff>=0.0.254",
    "pkginfo>=1.9.6",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-material>=9.1.9",
    "ipython>=8.12.3",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Same as Black.
line-length = 120
